--- a/stylesheet.css
+++ b/stylesheet.css
@@ -107,6 +107,7 @@ body {
 .hidden {
   display: none;
 }
+
 .content-left {
     width: 25%;
 }
@@ -139,4 +140,45 @@ body {
 .footer div nav a {
     color: white;
     text-decoration: none;
+}
+
+#cookie {
+    position: fixed;
+    bottom: 0;
+
+    text-align: left;
+
+    background-color: #22376f;
+    color: white;
+
+    height: 5%;
+    width: 100%;
+}
+
+#cookie #cookietext {
+    position: relative;
+    left: 20%;
+}
+
+#cookie a {
+    color: darkgray;;
+}
+
+#cookie #cookie-button {
+    line-height: 200%;
+    vertical-align: middle;
+    text-align: center;
+    position: absolute;
+    top: 15%;
+    right: 20%;
+    height: 70%;
+    width: 10%;
+    background-color: white;
+    color: black;
+    cursor: pointer;
+}
+
+#cookie #cookie-button:hover {
+    background-color: #384b7d;
+    color: white;
 }
