--- a/stylesheet.css
+++ b/stylesheet.css
@@ -103,6 +103,13 @@ body {
     padding-bottom: 3em;
 }
 
+.center-paragraph {
+  flex: 0 0 100%;
+}
+.center-paragraph h4 {
+  margin-bottom: 10px;
+}
+
 .content-left {
     width: 25%;
 }
@@ -151,6 +158,7 @@ body {
   border-width: 0 .2em .2em 0;
   display:      inline-block;
   padding:      .20em;
+  margin-right: 8px;
   transform:rotate(45deg); 
 }
 
@@ -159,6 +167,7 @@ body {
   border-width: 0 .2em .2em 0;
   display:      inline-block;
   padding:      .20em;
+  margin-right: 8px;
   transform:rotate(-45deg);
 }
 
