neue sachen bei v02c hinzugefügt, h1-h3 im stylesheet geändert

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -76,16 +76,12 @@ body {
   width: 50%;
 }
 
-.content-center h1 {
+.content-center h1, h2, h3 {
   text-align: center;
 }
 
 .content-center p {
   margin-top: 2px;
-}
-
-.content-center h1 {
-  text-align: center;
 }
 
 .content-center .beschreibung {
