--- a/v02c-data/v02c-style.css
+++ b/v02c-data/v02c-style.css
@@ -1,5 +1,28 @@
-#abb2-1 {
-    width: 70%;
-    position: relative;
-    left: 15%;
+#abb3-1{
+    width: 40%;
+    float: right;
+    text-align: center;
 }
+
+#abb3-2 {
+    width: 80%;
+    position: relative;
+    left: 5%;
+}
+
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+.uebung {
+    width: 50%;
+    position: relative;
+    left: 25%;
+    border: 2px solid blue;
+    padding: 2px;
+    min-height: 2.5em;
+    line-height: 1.5em;
+}
+
