--- a/stylesheet.css
+++ b/stylesheet.css
@@ -229,6 +229,20 @@ h2 {
     }
 }
 
+@media screen and (min-width: 701px) and (max-width: 1299px) {
+    .content-right {
+        display: none;
+    }
+
+    .content-center {
+        width: 66.6%;
+    }
+
+    .content-left {
+        width: 33.3%;;
+    }
+}
+
 @media screen and (min-width: 320px) and (max-width: 700px) {
     .content-left {
         display: none;
