--- a/v02b-data/v02b-style.css
+++ b/v02b-data/v02b-style.css
@@ -1,13 +1,3 @@
-    #abb3-1 {
-        width: 40%;
-        float: right;
-        text-align: center;
-    }
-    
-    #abb3-2 {
-        width: 80%;
-        position: relative;
-    }
 
     #abb1-1 {
         float: right;
@@ -21,50 +11,70 @@
 
     #abb2-1 {
         width: 80%;
+        max-width: 300px;
+        margin: auto;
     }
 
     #abb2-2 {
         width: 30%;
-        position: relative;
-        left: 20%;
+        margin: auto;
     }
 
     #abb2-3 {
         width: 40%;
+        max-width: 200px;
         position: relative;
-        left: -10%;
+        left: 0%;
         bottom: 20%;
     }
 
     #abb2-4 {
         width: 40%;
+        max-width: 200px;
         position: absolute;
         right: 0;
-        bottom: 15%;
+        bottom: 20%;
     }
 
     #abb2-5 {
         width: 40%;
+        max-width: 200px;
         position: relative;
-        left: -10%;
+        left: 0%;
         bottom: 0;
     }
 
     #abb2-6 {
+        
         width: 40%;
+        max-width: 200px;
         position: absolute;
         right: 0;
         bottom: 0;
     }
 
+    #abb3-1 {
+        width: 40%;
+        float: right;
+        text-align: center;
+    }
+    
+    #abb3-2 {
+        width: 80%;
+        max-width: 400px;
+        margin: auto;
+    }
+
+
     #abb4-1 {
         width: 70%;
-        position: relative;
-        left: 10%;
+        max-width: 400px;
+        margin: auto;
     }
 
     #abb4-2 {
         width: 40%;
+        max-width: 200px;
         float: right;
     }
 
@@ -75,26 +85,26 @@
 
     #abb5-2 {
         width: 80%;
+        max-width: 300px;
+        margin: auto;
     }
 
     #abb5-3 {
-        z-index: -1;
-        width: 45%;
-        position: relative;
-        left: -5%;
+        width: 50%;
+        max-width: 300px;
+        margin: auto;
     }
 
     #abb5-4 {
-        z-index: -1;
-        width: 45%;
-        position: absolute;
-        top: -25%;
-        right: -5%;
+        width: 50%;
+        max-width: 300px;
+        margin: auto;
     }
 
     #abb5-5 {
         z-index: -1;
         width: 45%;
+        max-width: 300px;
         position: relative;
         left: -5%;
     }
@@ -102,6 +112,7 @@
     #abb5-6 {
         z-index: -1;
         width: 45%;
+        max-width: 300px;
         position: absolute;
         top: -40%;
         right: -5%;
@@ -110,6 +121,7 @@
     #abb5-7 {
         z-index: -1;
         width: 45%;
+        max-width: 300px;
         position: relative;
         left: -5%;
     }
@@ -117,6 +129,7 @@
     #abb5-8 {
         z-index: -1;
         width: 45%;
+        max-width: 300px;
         position: absolute;
         top: -25%;
         right: -5%;
@@ -124,12 +137,13 @@
 
     #abb5-9 {
         width: 40%;
+        max-width: 300px;
         position: relative;
         left: 20%;
     }
 
     #tab1-1 {
-        width: 120%;
+        width: 100%;
     }
 
     #tab1-1 #red {
