--- a/stylesheet.css
+++ b/stylesheet.css
@@ -124,6 +124,23 @@ h3 {
     margin-right: 1%;
 }
 
+.start-logo {
+    float: left;
+    max-width: 100%;
+    height: auto;
+    margin-right: 1%;
+}
+
+.thema {
+    font-size: 1.2em;
+}
+
+.thema::after {
+    content: "";
+    clear: both;
+    display: block;
+}
+
 .content-center .author {
     font-size: 0.8em;
     text-align: right;
