--- a/stylesheet.css
+++ b/stylesheet.css
@@ -141,6 +141,10 @@ h3 {
     display: block;
 }
 
+.thema-h3 {
+    text-align: center;
+}
+
 .content-center .author {
     font-size: 0.8em;
     text-align: right;
