--- a/mainpage-style.css
+++ b/mainpage-style.css
@@ -1,3 +1,24 @@
+.start-logo {
+    float: left;
+    max-width: 100%;
+    height: auto;
+    margin-right: 1%;
+}
+
+.thema {
+    font-size: 1.2em;
+}
+
+.thema::after {
+    content: "";
+    clear: both;
+    display: block;
+}
+
+.thema-h3 {
+    text-align: center;
+}
+
 #html-logo {
     margin-right: 2%;
     margin-left: 3%;
