--- a/stylesheet.css
+++ b/stylesheet.css
@@ -76,6 +76,7 @@ body {
 
 .center-paragraph {
     flex: 0 0 100%;
+    margin-bottom: 3.5em;
 }
 
 .center-paragraph h4 {
@@ -148,12 +149,13 @@ h3 {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 2.5em;
+    height: 5em;
     /*Zeilenhöhe*2.5*/
     background-color: #22376f;
 }
 
 .footer div {
+    margin-top: 1em;
     position: relative;
     text-align: center;
 }
