--- a/website_php/stylesheet.css
+++ b/website_php/stylesheet.css
@@ -76,6 +76,7 @@ body {
 
 .center-paragraph {
     flex: 0 0 100%;
+    margin-bottom: 3.5em;
 }
 
 .center-paragraph h4 {
@@ -148,18 +149,20 @@ h3 {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 2.5em;
+    height: 5em;
     /*Zeilenhöhe*2.5*/
     background-color: #22376f;
 }
 
 .footer div {
+    margin-top: 1em;
     position: relative;
     text-align: center;
 }
 
 .footer div nav a {
     color: white;
+    font-size: 1.3em;
     text-decoration: none;
 }
 
@@ -412,12 +415,12 @@ table td {
     font-size: 24px;
 }
 
-.formbtn1{
+.formbtn1 {
     padding: 5px;
     margin: 4px;
 }
 
-.formbtn2{
+.formbtn2 {
     padding: 5px;
     margin: 4px;
 }
